// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[` 1`] = `
<dl
  class="euiDescriptionList euiDescriptionList--row emotion-euiDescriptionList-euiDescriptionList-row"
>
  <dt
    class="euiDescriptionList__title emotion-euiDescriptionList-euiDescriptionList-row"
  >
    Title 1
  </dt>
  <dd
    class="euiDescriptionList__description emotion-euiDescriptionList-euiDescriptionList-row"
  >
    Description 1
  </dd>
  <dt
    class="euiDescriptionList__title emotion-euiDescriptionList-euiDescriptionList-row"
  >
    <em>
      Title 2
    </em>
  </dt>
  <dd
    class="euiDescriptionList__description emotion-euiDescriptionList-euiDescriptionList-row"
  >
    <code>
      Description 2
    </code>
  </dd>
  <dt
    class="euiDescriptionList__title emotion-euiDescriptionList-euiDescriptionList-row"
  >
    Title 3
  </dt>
  <dd
    class="euiDescriptionList__description emotion-euiDescriptionList-euiDescriptionList-row"
  >
    Description 3
  </dd>
</dl>
`;

exports[`EuiDescriptionList is rendered 1`] = `
<dl
  aria-label="aria-label"
  class="euiDescriptionList euiDescriptionList--row testClass1 testClass2 emotion-euiDescriptionList-euiDescriptionList-row"
  data-test-subj="test subject string"
>
  Content
</dl>
`;

exports[`EuiDescriptionList props align center is rendered 1`] = `
<dl
  class="euiDescriptionList euiDescriptionList--row euiDescriptionList--center emotion-euiDescriptionList-euiDescriptionList-row"
/>
`;

exports[`EuiDescriptionList props align left is rendered 1`] = `
<dl
  class="euiDescriptionList euiDescriptionList--row emotion-euiDescriptionList-euiDescriptionList-row"
/>
`;

exports[`EuiDescriptionList props compressed is rendered 1`] = `
<dl
  class="euiDescriptionList euiDescriptionList--row euiDescriptionList--compressed emotion-euiDescriptionList-euiDescriptionList-row"
/>
`;

exports[`EuiDescriptionList props listItems descriptionProps is rendered 1`] = `
<dl
  class="euiDescriptionList euiDescriptionList--row emotion-euiDescriptionList-euiDescriptionList-row"
>
  <dt
    class="euiDescriptionList__title emotion-euiDescriptionList-euiDescriptionList-row"
  >
    Title 1
  </dt>
  <dd
    aria-label="aria-label"
    class="euiDescriptionList__description testClass1 testClass2 emotion-euiDescriptionList-euiDescriptionList-row"
    data-test-subj="test subject string"
  >
    Description 1
  </dd>
  <dt
    class="euiDescriptionList__title emotion-euiDescriptionList-euiDescriptionList-row"
  >
    <em>
      Title 2
    </em>
  </dt>
  <dd
    aria-label="aria-label"
    class="euiDescriptionList__description testClass1 testClass2 emotion-euiDescriptionList-euiDescriptionList-row"
    data-test-subj="test subject string"
  >
    <code>
      Description 2
    </code>
  </dd>
  <dt
    class="euiDescriptionList__title emotion-euiDescriptionList-euiDescriptionList-row"
  >
    Title 3
  </dt>
  <dd
    aria-label="aria-label"
    class="euiDescriptionList__description testClass1 testClass2 emotion-euiDescriptionList-euiDescriptionList-row"
    data-test-subj="test subject string"
  >
    Description 3
  </dd>
</dl>
`;

exports[`EuiDescriptionList props listItems titleProps is rendered 1`] = `
<dl
  class="euiDescriptionList euiDescriptionList--row emotion-euiDescriptionList-euiDescriptionList-row"
>
  <dt
    aria-label="aria-label"
    class="euiDescriptionList__title testClass1 testClass2 emotion-euiDescriptionList-euiDescriptionList-row"
    data-test-subj="test subject string"
  >
    Title 1
  </dt>
  <dd
    class="euiDescriptionList__description emotion-euiDescriptionList-euiDescriptionList-row"
  >
    Description 1
  </dd>
  <dt
    aria-label="aria-label"
    class="euiDescriptionList__title testClass1 testClass2 emotion-euiDescriptionList-euiDescriptionList-row"
    data-test-subj="test subject string"
  >
    <em>
      Title 2
    </em>
  </dt>
  <dd
    class="euiDescriptionList__description emotion-euiDescriptionList-euiDescriptionList-row"
  >
    <code>
      Description 2
    </code>
  </dd>
  <dt
    aria-label="aria-label"
    class="euiDescriptionList__title testClass1 testClass2 emotion-euiDescriptionList-euiDescriptionList-row"
    data-test-subj="test subject string"
  >
    Title 3
  </dt>
  <dd
    class="euiDescriptionList__description emotion-euiDescriptionList-euiDescriptionList-row"
  >
    Description 3
  </dd>
</dl>
`;

exports[`EuiDescriptionList props type column is rendered 1`] = `
<dl
  class="euiDescriptionList euiDescriptionList--column emotion-euiDescriptionList-euiDescriptionList-column"
/>
`;

exports[`EuiDescriptionList props type inline is rendered 1`] = `
<dl
  class="euiDescriptionList euiDescriptionList--inline emotion-euiDescriptionList-euiDescriptionList-inline"
/>
`;

exports[`EuiDescriptionList props type responsiveColumn is rendered 1`] = `
<dl
  class="euiDescriptionList euiDescriptionList--responsiveColumn emotion-euiDescriptionList-euiDescriptionList-responsiveColumn"
/>
`;

exports[`EuiDescriptionList props type row is rendered 1`] = `
<dl
  class="euiDescriptionList euiDescriptionList--row emotion-euiDescriptionList-euiDescriptionList-row"
/>
`;
